@@ -11,6 +11,7 @@ email_header: 0
 trac_version: 0.9
 enable_syslog : 0
 alternate_notify_template :
+drop_spam : 0
 
 
 [bas]
