@@ -7,6 +7,8 @@
 	  0.8.
 	  Fixed by   : Bas van der Vlies
 	  Thanks to Matthew Good for the hint
+	* Added drop_spam option, default = 0. If set then
+	  mail marked as Spam is not accepted.
 
 2006-10-02
 	* Fixes possible segmentation faults in run_email2trac.c 
